--- a/01-Fundatamentals-Part-1/index.html
+++ b/01-Fundatamentals-Part-1/index.html
@@ -29,9 +29,11 @@
 <body>
   <h1>JavaScript Fundamentals – Part 1</h1>
 
-  <script src="./script.js">
+  <!-- <script src="./script.js">
   </script>
   <script src="./assignment1.js">
+  </script> -->
+  <script src="./assignments/assignment8.js">
   </script>
 </body>
 
